objects/Account.object
<CustomObject>
    <fields>
        <fullName>Number_of_Times_Terminated__c</fullName>
        <label>Number of Times Terminated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <label>Opportunity Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PHSS_Channel__c</fullName>
        <inlineHelpText>Used to identify the PHSS Sales Channel type.  Choose all that apply.</inlineHelpText>
        <label>PHSS Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>Authorized Provider</fullName>
                </value>
                <value>
                    <fullName>Business Client</fullName>
                </value>
                <value>
                    <fullName>CEP Agency</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Licensed Training Provider</fullName>
                </value>
                <value>
                    <fullName>NAT Agency</fullName>
                </value>
                <value>
                    <fullName>NAT AP/LTP</fullName>
                </value>
                <value>
                    <fullName>National Account Network</fullName>
                </value>
                <value>
                    <fullName>RCS Distributor</fullName>
                </value>
                <value>
                    <fullName>RCS Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <inlineHelpText>This is the status of customers&apos; timely payment</inlineHelpText>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Granted</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Eligible for Reinstatement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <inlineHelpText>This is the number of days after the invoice date that a customer has to remit timely payment</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NET 30</fullName>
                </value>
                <value>
                    <fullName>NET 45</fullName>
                </value>
                <value>
                    <fullName>NET 60</fullName>
                </value>
                <value>
                    <fullName>NET 75</fullName>
                </value>
                <value>
                    <fullName>NET 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Payment_type__c</fullName>
        <description>identify which types are the customer preferred payment</description>
        <inlineHelpText>This is how customers pay for products and services</inlineHelpText>
        <label>Preferred Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit/Debit Card</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Invoice exception</fullName>
                </value>
                <value>
                    <fullName>Money Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Agreement__c</fullName>
        <formula>IF( ISPICKVAL(Is_Pricing_Agreement__c, &quot;Yes&quot;) , &quot;Pricing&quot;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Agreement_in_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Agreement in Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REPORT_AR_0_30_Days__c</fullName>
        <description>Used only for Data upload to populate AR 0-30 Days</description>
        <label>REPORT AR 0-30 Days</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORT_AR_121_150_Days__c</fullName>
        <description>This field is used for Data Uplaod and updates AR 121-150 Days field</description>
        <label>REPORT AR 121-150 Days</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORT_AR_121_180_Days__c</fullName>
        <label>REPORT AR 121-180 Days</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORT_AR_180_Days__c</fullName>
        <description>This field is used for data load and updates field AR &gt;180 Days</description>
        <label>REPORT AR &gt;180 Days</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORT_AR_Last_Report__c</fullName>
        <description>This field is used as a data load and updates AR Last Report field</description>
        <label>REPORT AR Last Report</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>REPORT_Collections_Termination_Date__c</fullName>
        <label>REPORT Collections Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REPORT_Last_Payment_Date__c</fullName>
        <description>This field is used for Data load and updates LAst Payment Date</description>
        <label>REPORT Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REPORT_Total_AR__c</fullName>
        <description>This field is used for data upload for Total AR</description>
        <label>REPORT Total AR</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Red_Cross_PO__c</fullName>
        <description>This number is created for use with pre payment and invoice approval</description>
        <inlineHelpText>This is the same as the Purchase Order ID in Saba. If the customer issued a PO, the number they provided will go in both fields</inlineHelpText>
        <label>Red Cross PO#</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Cross_PO_expiration_Date__c</fullName>
        <description>This is the date the Red Cross PO will expire</description>
        <inlineHelpText>This is the same as the Expiration Date on the Purchase Order in Saba.</inlineHelpText>
        <label>Red Cross PO# Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SABA_LMS_Code__c</fullName>
        <label>SABA\LMS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFMC_invalid__c</fullName>
        <formula>IF(CONTAINS(Name, &quot;bucket&quot;), true, 
IF(CONTAINS(Name, &quot;Bucket&quot;), true, false ))</formula>
        <label>SFMC invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Account_Number_Text__c</fullName>
        <label>SF Account Number Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Account_Number__c</fullName>
        <formula>if(OR( 
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)), 
if(ISBLANK(SF_Account_Number_Text__c), if(ISBLANK(Salesforce_Auto_Number__c),CFS_Account_Number__c,Salesforce_Auto_Number__c), SF_Account_Number_Text__c) ,null)</formula>
        <label>SF Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SIC Code</label>
        <referenceTo>SIC__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <formula>SIC_Code__r.SIC_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Auto_Number__c</fullName>
        <displayFormat>SF{00000000}</displayFormat>
        <label>Salesforce Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System field used for Data Migration.</description>
        <label>Source System</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spots_Taken__c</fullName>
        <description>This field should only be populated for bucket accounts. This field represents how many contacts are under the bucket account.</description>
        <label>Spots Taken in Bucket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Account Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account_Type__c</fullName>
        <label>Strategic Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Strategic_Account__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Enhanced Support</fullName>
                </value>
                <value>
                    <fullName>Special Handling</fullName>
                    <label>Special Handling - SCC</label>
                </value>
                <value>
                    <fullName>Special Handling - Field</fullName>
                </value>
                <value>
                    <fullName>SCC Scheduling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to designate this Account as a Strategic Account.</description>
        <label>Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <label>Tax Exempt?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID_Number__c</fullName>
        <label>Tax ID Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminate_Reinstate_Date__c</fullName>
        <inlineHelpText>This date reflects the day the account was either Terminated or Reinstated. Status other than these will not update this field.</inlineHelpText>
        <label>Terminate/Reinstate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <inlineHelpText>This is the reason for current payment status</inlineHelpText>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Payment_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Exception Granted</fullName>
                </value>
                <value>
                    <fullName>Invoice Paid in Full</fullName>
                </value>
                <value>
                    <fullName>Non-Payment</fullName>
                    <label>Non Payment</label>
                </value>
                <value>
                    <fullName>Non-Payment sent to collections agency</fullName>
                    <label>Non Payment; Sent to Collections Agency</label>
                </value>
                <value>
                    <fullName>Non Payment; Sent to Collections</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <formula>Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp; Territory__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to Territory consolidated field</description>
        <inlineHelpText>Select the Territory field</inlineHelpText>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Accounts (Territory)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>This_is_HQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>This is HQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_AR__c</fullName>
        <formula>REPORT_Total_AR__c</formula>
        <label>Total AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waterpark__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates an account as an aquatics strategic target.  Not displayed on page layout, controlled centrally by Marketing &amp; Business Operations.</description>
        <label>Waterpark</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Bucket_Account</fullName>
        <active>true</active>
        <description>The record type that represents Bucket Accounts which are used to store household accounts</description>
        <label>Bucket Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facility_Billing_Accounts_in_Account_Hierarchy</fullName>
        <active>true</active>
        <description>Facility + Billing Accounts in Account Hierarchy</description>
        <label>Facility Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household_Account</fullName>
        <active>false</active>
        <description>The record type associated to the holding household records for individuals who will be dealing with the Training Support Center at PHSS.</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization_Account</fullName>
        <active>true</active>
        <description>The record type most associated with accounts focused on Businesses and organizations dealing with PHSS</description>
        <label>Organization Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_Length</fullName>
        <active>true</active>
        <description>Validates that the Account Number is exactly eight digits (if it is not blank). The
number eight is simply illustrative. You can change this to any number you like.</description>
        <errorConditionFormula>AND(
LEN(AccountNumber) &gt; 0,
LEN(AccountNumber) &lt;&gt; 8, $Setup.Validation_Rules__c.Bypass_Rules__c = false

)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Account Number must be eight digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_is_Numeric</fullName>
        <active>true</active>
        <description>Validates that the Account Number is numeric if not blank</description>
        <errorConditionFormula>AND(
LEN ( AccountNumber) &gt; 0,
NOT (ISNUMBER( AccountNumber )),
 $Setup.Validation_Rules__c.Bypass_Rules__c = false
)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Account Number is not numeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Annual_Revenue_Range</fullName>
        <active>true</active>
        <description>Validates that the account Annual Revenue is not negative and also does not exceed $100 billion. This limit is designed to catch typos.You can definitely define your own limit for this</description>
        <errorConditionFormula>AND(
OR(
AnnualRevenue &lt; 0,
AnnualRevenue &gt; 100000000000

),
 $Setup.Validation_Rules__c.Bypass_Rules__c = false)</errorConditionFormula>
        <errorDisplayField>AnnualRevenue</errorDisplayField>
        <errorMessage>Annual Revenue cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bankruptcy_Date_Approval</fullName>
        <active>true</active>
        <description>This VR defines that only specific users are able edit Bankruptcy Date field</description>
        <errorConditionFormula>And(
NOT(ISBLANK(Bankruptcy_Date__c)),
AND
(ISCHANGED(Bankruptcy_Date__c)),

AND(
$User.Id != &quot;005d0000001WGso&quot;, /*Anne Hathaway*/
$User.Id != &quot;005d0000001WGtI&quot;, /*Kwesida Rhoney*/
$User.Id != &quot;005d0000001Vmik&quot;, /*Wendy Firdman*/
$User.Id != &quot;0050V000006lVNt&quot;, /*Craig Terrell*/
$User.Id != &quot;005d0000001Wyup&quot;, /*Kara Desmaris*/
$User.Id != &quot;0050V000006jKNy&quot;, /*Nyle Grimes*/
$User.Id != &quot;005d0000001WGrq&quot;, /*Mandy Skomorucha*/
$User.Id != &quot;005d00000040uDS&quot;, /*Gita Borovsky*/
$User.Id != &quot;005d0000005I9dx&quot; /*Mike A Smith*/
),

$Setup.Validation_Rules__c.Bypass_Rules__c = false )</errorConditionFormula>
        <errorDisplayField>Bankruptcy_Date__c</errorDisplayField>
        <errorMessage>You don&apos;t have permission to set the Bankruptcy Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bankruptcy_Type_Approval</fullName>
        <active>true</active>
        <description>This VR defines that only specific users are able edit Bankruptcy Type field.</description>
        <errorConditionFormula>AND(
AND(
ISCHANGED(Bankruptcy_Type__c),
OR(
ISPICKVAL(Bankruptcy_Type__c, &quot;Chapter 7 (out of business)&quot;),
ISPICKVAL(Bankruptcy_Type__c, &quot;Chapter 9 (municipal)&quot;),
ISPICKVAL(Bankruptcy_Type__c, &quot;Chapter 11 (restructure)&quot;))),

AND(
$User.Id != &quot;005d0000001WGso&quot;, /*Anne Hathaway*/
$User.Id != &quot;005d0000001WGtI&quot;, /*Kwesida Rhoney*/
$User.Id != &quot;005d0000001Vmik&quot;, /*Wendy Firdman*/
$User.Id != &quot;0050V000006lVNt&quot;, /*Craig Terrell*/
$User.Id != &quot;005d0000001Wyup&quot;, /*Kara Desmaris*/
$User.Id != &quot;0050V000006jKNy&quot;, /*Nyle Grimes*/
$User.Id != &quot;0050V000007sCtK&quot;, /*Margaret Pionzio*/
$User.Id != &quot;005d0000001WGrq&quot;, /*Mandy Skomorucha*/
$User.Id != &quot;005d00000040uDS&quot;, /*Gita Borovsky*/
$User.Id != &quot;005d0000005I9dx&quot; /*Mike A Smith*/
),

$Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
        <errorDisplayField>Bankruptcy_Type__c</errorDisplayField>
        <errorMessage>You do not have permission to make this change. Contact Customer Ops if you are receiving this message in error.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_RCS_channel_Billing_Contacts</fullName>
        <active>false</active>
        <description>Checks if the Billing contact type is &quot;RCS Billing&quot; for the PHSS channel RCS Retail or RCS Distributor</description>
        <errorConditionFormula>AND(
        !ISBLANK(Billing_Contact__c),
       NOT(AND( 
        OR( 
          INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
          INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)
         ),
 
    INCLUDES(Billing_Contact__r.Contact_Type__c,&quot;RCS Billing&quot;)
         )   )

)</errorConditionFormula>
        <errorDisplayField>Billing_Contact__c</errorDisplayField>
        <errorMessage>RCS Billing Contact Type has to be RCS Billing for RCS Retail or RCS Distributors channels</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_PO_Expiration_Date_Required</fullName>
        <active>true</active>
        <description>If the Customer PO# is entered the Customer PO# Expiration Date is required</description>
        <errorConditionFormula>AND(
NOT(ISBLANK( Customer_PO__c)), 
ISBLANK(Customer_PO_Expiration_Date__c),
$Setup.Validation_Rules__c.Bypass_Rules__c = False )</errorConditionFormula>
        <errorDisplayField>Customer_PO_Expiration_Date__c</errorDisplayField>
        <errorMessage>If the Customer PO# is entered the Customer PO# Expiration Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_PO_Required</fullName>
        <active>true</active>
        <description>If an Expiration date is entered, the PO # is required.</description>
        <errorConditionFormula>AND(
ISBLANK( Customer_PO__c), 
 NOT(ISBLANK(Customer_PO_Expiration_Date__c)),
 $Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
        <errorDisplayField>Customer_PO__c</errorDisplayField>
        <errorMessage>If Customer PO # Expiration Date is entered, the Customer PO # is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Number_with_10_Digits</fullName>
        <active>true</active>
        <description>Fax number to be with 10 digits</description>
        <errorConditionFormula>IF( 

OR(ISBLANK(Fax), $Setup.Validation_Rules__c.Bypass_Rules__c ), 

false, 

NOT(REGEX(Fax, &quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>US Fax numbers should be in this format: (999) 999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fill_billing_Details_before_Saving_Acc</fullName>
        <active>true</active>
        <description>make billing Address required for Account with PHSS channel &apos;RCS Retail&apos;</description>
        <errorConditionFormula>AND( 
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
OR(ISBLANK(BillingStreet), 
ISBLANK(BillingCity), 
ISBLANK(BillingState), 
ISBLANK(BillingPostalCode), 
ISBLANK(BillingCountry) 
),
$User.Id &lt;&gt; &quot;005d0000005I9dx&quot;, /*Mike A Smith */
$User.Id &lt;&gt; &quot;0050V000006ld8r&quot;, /*Jatin Acharya */
$User.Id &lt;&gt; &quot;005d00000040uDS&quot; /*Gita Borovsky */ 
)</errorConditionFormula>
        <errorMessage>Fill billing details before saving Account with PHSS Channel Type RCS Retail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initial_Bucket_Account_Creation</fullName>
        <active>true</active>
        <description>Bucket accounts that are newly created must be marked as having no spots taken</description>
        <errorConditionFormula>ISNEW() &amp;&amp; RecordType.Id ==  $Setup.Bucket_Account_Settings__c.Bucket_Account_RecordTypeID__c &amp;&amp;  Spots_Taken__c != 0</errorConditionFormula>
        <errorDisplayField>Spots_Taken__c</errorDisplayField>
        <errorMessage>Bucket accounts that are newly created must be marked as having no spots taken</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Insert_Restriction_on_Invoice_del_Fields</fullName>
        <active>true</active>
        <description>Prevents inserting Invoice delivery fields, while creating Account if the user does not have permission.</description>
        <errorConditionFormula>AND(ISNEW(), !$Permission.Permission_for_three_fields_in_Account, 
OR(!ISPICKVAL(Invoice_Delivery_Type__c, &apos;&apos;), !ISBLANK(Inv_Del_Assign_Date__c), !ISBLANK(Invoice_delivery_Email__c)), $Profile.Name != &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>You do not have permission to insert Invoice Delivery Method, Inv Del Assign Date or Invoice Delivery Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Delivery_Method_required_for_RCS</fullName>
        <active>true</active>
        <description>Invoice Delivery Method is required for RCSPO Account creation.</description>
        <errorConditionFormula>AND( 
OR( 
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)), 
ISBLANK(TEXT(Invoice_Delivery_Type__c)))</errorConditionFormula>
        <errorMessage>Invoice Delivery Method is required for RCS PO Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_delivery_Email_Restriction</fullName>
        <active>true</active>
        <description>Prevent entering Invoice delivery Email when Account PHSS Channel is not RCS Retail Or RCS Distributor And Email(Red Cross Email) is not Empty.</description>
        <errorConditionFormula>AND( 
!ISBLANK(Invoice_delivery_Email__c), 
NOT(AND( 
OR( 
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)), 
!ISBLANK(Log_In_Email__c) 
) 
),
!$Setup.Validation_Rules__c.Bypass_Rules__c = TRUE 
)</errorConditionFormula>
        <errorDisplayField>Invoice_delivery_Email__c</errorDisplayField>
        <errorMessage>You cannot add Invoice delivery Email for this Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Login_Email_check_for_RCS_Channels</fullName>
        <active>true</active>
        <description>Checks Login email is entered for RCS channels</description>
        <errorConditionFormula>AND( 
OR( 
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)), 
ISBLANK(Log_In_Email__c),
$User.Id &lt;&gt; &quot;005d0000005I9dx&quot;, /*Mike A Smith */
$User.Id &lt;&gt; &quot;0050V000006ld8r&quot;, /*Jatin Acharya */
$User.Id &lt;&gt; &quot;005d00000040uDS&quot; /*Gita Borovsky */ 
)</errorConditionFormula>
        <errorMessage>Red Cross Store Email field required when PHSS channel is of RCS Retail or RCS Distributor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Status_Granted</fullName>
        <active>false</active>
        <description>If payment Status = Granted, Red Cross PO# is required</description>
        <errorConditionFormula>AND(ISPICKVAL( Payment_Status__c , &quot;Granted&quot;),
ISBLANK( Red_Cross_PO__c ), 
 $Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
        <errorDisplayField>Payment_Status__c</errorDisplayField>
        <errorMessage>If Payment Status is Granted, Red Cross PO# is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Status_Invoicing_Privileges_Appr</fullName>
        <active>false</active>
        <description>This VR defines that only specific users are able to switch values on Payment Status field. The group of users is defined in AR Exception Group.</description>
        <errorConditionFormula>AND( 
AND( 
ISCHANGED(Payment_Status__c), 
OR( 
ISPICKVAL(Payment_Status__c, &quot;Cancelled&quot;), 
ISPICKVAL(Payment_Status__c, &quot;Denied&quot;), 
ISPICKVAL(Payment_Status__c, &quot;Granted&quot;), 
ISPICKVAL(Payment_Status__c, &quot;Pending&quot;), 
ISPICKVAL(Payment_Status__c, &quot;Suspended&quot;), 
ISPICKVAL(Payment_Status__c, &quot;Terminated&quot;))), 


AND( 
$User.Id != &quot;005d0000001VstM&quot;, /*Rose Albert*/
$User.Id != &quot;005d0000000TvrN&quot;, /*Timothy Archuleta*/
$User.Id != &quot;005d0000001Vmik&quot;, /*Wendy Firdman*/
$User.Id != &quot;005d0000000Tvsu&quot;, /*LaJuanya Jones*/
$User.Id != &quot;005d0000001VvXF&quot;, /*James Thornberg*/
$User.Id != &quot;005d0000000Tvri&quot;, /*Neil Lokuge*/
$User.Id != &quot;005d0000000TvQL&quot;, /*Marty Mullins*/
$User.Id != &quot;005d0000001WLvx&quot;, /*Jane McInerney*/
$User.Id != &quot;005d0000001VFkj&quot;, /*Joy Zukauskas*/
$User.Id != &quot;005d0000001VdIm&quot;, /*Loretta Stahl*/
$User.Id != &quot;005d0000001XNW9&quot;, /*Ivo Dimov*/
$User.Id != &quot;005d00000040uDS&quot;, /*Gita Borovsky*/
$User.ProfileId != &quot;00eJ0000000Hyse&quot;, /*ARC SCC Profile*/ 
$User.Id != &quot;005d0000000Tvs4&quot;,/*Mickey Mason*/
$User.Id != &quot;005d0000001Wyup&quot;, /*Kara Desmaris*/   
$User.Id != &quot;005d0000000TvsF&quot;, /*Shawn Barker*/ 
$User.Id != &quot;005d0000001VDfh&quot;, /*Michael Johnson*/
$User.Id != &quot;005d0000001YGCa&quot;, /*Maggie Pauls*/
$User.Id != &quot;005d0000001YGDE&quot;, /*Monisha Slater*/
$User.Id != &quot;005d0000001VtMi&quot;, /*Mufalo Chitam*/
$User.Id != &quot;005d0000000Tuyj&quot;, /*Diane DeAnda*/
$User.Id != &quot;005d0000000Tzft&quot;, /*Juliet M. Panganiban */
$User.Id != &quot;005d0000001YBPi&quot;, /*Melissa Stratman*/
$User.Id != &quot;005d0000000Tvtl&quot;, /*Linda Thelen*/
$User.Id != &quot;005d0000000TvtP&quot;, /*Denice Douglas*/
$User.Id != &quot;005d0000001VhXb&quot;, /*Martha Terry*/
$User.Id != &quot;005d0000001Vxz1&quot;, /*Amy Alison*/
$User.Id != &quot;005d0000000TwiG&quot;, /*Deborah Judy*/
$User.Id != &quot;005d0000001Vp4A&quot;, /*DéBorah Ashley*/
$User.Id != &quot;005d0000001Wyym&quot;, /*Beth McLeod*/
$User.Id != &quot;005d0000001VeCL&quot;, /*Maeella Smith*/
$User.Id != &quot;005d0000000TvuL&quot;, /*Monica Heller*/
$User.Id != &quot;005d0000001VeCG&quot;, /*Heather True */
$User.Id != &quot;005d0000000TuyJ&quot;, /*Heather Weller*/
$User.Id != &quot;005d0000001Vx87&quot;, /*Rita Vienazindis*/
$User.Id != &quot;005d0000005I9dx&quot; /*Mike A Smith*/
), 

$Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
        <errorDisplayField>Payment_Status__c</errorDisplayField>
        <errorMessage>You do not have permission to make this change. Please contact your Business Operations Manager for assistance.</errorMessage>
    </validationRules>
</CustomObject>